# ekx-demo

./: .firebaserc  .gitignore  CMakeLists.txt  README.md  build-shaders.ts  ek.js  ek.ts  firebase.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-android.yml  build-web.yml  build.yml
assets/: TickingTimebombBB.asset.xml  _default_glyph_cache.asset.xml  _main_atlas.asset.xml  assets.js  assets.ts  sfx.asset.xml
assets/mods/: virgill_-_cherry_coke.mod
assets/scripts/: index.d.ts  main.js
assets/sfx/: README.md
assets/skybox/: skybox.asset.xml
scripts/: gen.js
src/: demo_main.c  demo_main.cpp  demo_main.hpp  sample_audio.c  sample_audio.h  sample_audio.hpp  sample_base.c  sample_base.cpp  sample_base.h  sample_base.hpp  sample_flash.c  sample_flash.cpp  sample_flash.h  sample_flash.hpp  sample_integrations.c  sample_integrations.cpp  sample_integrations.h  sample_integrations.hpp  sample_text.c  sample_text.cpp  sample_text.h  sample_text.hpp  screenshots.h  screenshots.hpp  temp_test.c
src/3d/: camera_arcball.c  camera_arcball.cpp  camera_arcball.h  camera_arcball.hpp  model_utils.c  model_utils.h  sample_3d.c  sample_3d.cpp  sample_3d.h  sample_3d.hpp
src/config/: AppVersion.h  BuildInfo.h  build_info.h
src/modplay/: pocketmod.c
src/piko/: examples.c  examples.cpp  examples.h  piko.h  sample_piko.c  sample_piko.cpp  sample_piko.h  sample_piko.hpp
src/render3d/: model_asset.c.h  render3d_shader.h  scene3d.c.h  scene3d.h
src/scripting/: js_api.c  scripting.c  scripting.h
src/sim/: Motion.cpp  Motion.hpp  SampleSim.cpp  SampleSim.hpp  follow.c  follow.h  motion.c  motion.h  sample_sim.c  sample_sim.h
src/ui/: minimal.cpp  minimal.hpp  minimal_ui.c  minimal_ui.h
